Added worker project