@@ -1,4 +1,5 @@
 import org.grails.gradle.plugin.tasks.GrailsTask
+
 version "0.1"
 
 configurations {
@@ -7,7 +8,8 @@ configurations {
 }
 
 dependencies {
-    bootstrap "org.grails.plugins:tomcat:7.0.54" // No container is deployed by default, so add this
+    //bootstrap "org.grails.plugins:tomcat:7.0.54" // No container is deployed by default, so add this
+    bootstrap "org.grails.plugins:jetty:2.0.3"
     test "org.grails:grails-datastore-test-support:1.0-grails-2.4"
     compile 'org.grails.plugins:resources:1.2.13' // Just an example of adding a Grails plugin
     compile "org.grails.plugins:scaffolding:2.1.2"
@@ -29,7 +31,15 @@ dependencies {
     compile project(':gtp-service')
 }
 
-task 'grails-run-app' (type: GrailsTask, overwrite: true) {
+task 'debug'(type: GrailsTask, overwrite: true) {
+    command "run-app"
+    jvmOptions {
+        jvmArgs '-Xms32m -Xmx1524m -XX:PermSize=32m -XX:MaxPermSize=512m -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005'.split(' ')
+        //jvmArgs '-Xms32m -Xmx1524m -XX:PermSize=32m -XX:MaxPermSize=512m -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+UseParNewGC '.split(' ')
+    }
+}
+
+task 'run'(type: GrailsTask, overwrite: true) {
     command "run-app"
     jvmOptions {
         jvmArgs '-Xms32m -Xmx1524m -XX:PermSize=32m -XX:MaxPermSize=512m -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+UseParNewGC'.split(' ')
